--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "intro-to-sql",
   "version": "0.0.1",
-  "description": "A quikc introduction to SQL using node.js\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[1;2D\u001b[No\u001b[2~\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C",
+  "description": "A quick introduction to SQL using node.js",
   "main": "index.js",
   "dependencies": {
     "mysql": "^2.11.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
